# rustchain-lab

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/apps/: Cargo.toml
crates/apps/src/: defi.rs  lib.rs  nft.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  lib.rs  logging.rs
crates/core/: Cargo.toml
crates/core/src/: block.rs  blockchain.rs  error.rs  hash.rs  lib.rs  merkle.rs  pow.rs  transaction.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: error.rs  lib.rs  signature.rs  wallet.rs
crates/p2p/: Cargo.toml
crates/p2p/src/: codec.rs  engine.rs  error.rs  lib.rs  message.rs  peer.rs  queue.rs
crates/storage/: Cargo.toml
crates/storage/src/: error.rs  history.rs  lib.rs  state.rs
crates/vm/: Cargo.toml
crates/vm/src/: bytecode.rs  compiler.rs  lib.rs  runtime.rs
docs/: architecture.md
scripts/: backup_data.sh  build_api.sh  deploy_api.sh  install_systemd_service.sh  multi_node_check.sh
scripts/systemd/: rustchain-api.env.example  rustchain-api.service.template
