[workspace]
members = [
    "crates/api",
    "crates/apps",
    "crates/cli",
    "crates/core",
    "crates/crypto",
    "crates/p2p",
    "crates/storage",
    "crates/vm",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["RustChain Lab Contributors"]
repository = "https://github.com/your-org/rustchain-lab"

[workspace.dependencies]
anyhow = "1"
axum = "0.7"
bincode = "1"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = "2"
hex = "0.4"
rocksdb = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }
