[package]
name = "rustchain-api"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
rustchain-common = { path = "../common" }
rustchain-core = { path = "../core" }
rustchain-crypto = { path = "../crypto" }
rustchain-apps = { path = "../apps" }
rustchain-storage = { path = "../storage" }
rustchain-vm = { path = "../vm" }
bincode.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
