[package]
name = "rustchain-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
rustchain-common = { path = "../common" }
rustchain-core = { path = "../core" }
rustchain-crypto = { path = "../crypto" }
serde_json.workspace = true
tracing.workspace = true
