[package]
name = "rustchain-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
rustchain-common = { path = "../common" }
rustchain-core = { path = "../core" }
rustchain-crypto = { path = "../crypto" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_json.workspace = true
tracing.workspace = true
