[package]
name = "rustchain-core"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
chrono.workspace = true
hex.workspace = true
rustchain-crypto = { path = "../crypto" }
rustchain-vm = { path = "../vm" }
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
